[package]
name = "lanterm"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "lanterm"
path = "src/main.rs"

[dependencies]
# Networking
iroh = "0.95"
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"

# UI & Terminal
ratatui = "0.30"
crossterm = { version = "0.27", features = ["events"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"
postcard = "1.0"

# Utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.9"
rand_core = "0.9"
